# vkcc-auto

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  make_celery.py  pyproject.toml  requirements.txt
app/: filehandler.py
app/src/: wbhandler.py
tests/: conftest.py
tests/core/: test_payload.py  test_vkclient.py  test_wbhandler.py
tests/front/: test_factory.py  test_filehandler.py
tests/resources/: input_example.xlsx
vkcc-auto/: __init__.py  filehandler.py  main_logic_testing.py  vkclient.py  wbhandler.py
vkcc-auto/src/: __init__.py  vkclient.py
vkcc-auto/static/: style.css
vkcc-auto/templates/: index.html
vkcc_auto/: __init__.py  filehandler.py  tasks.py  views.py
vkcc_auto/config/: __init__.py  gunicorn.py  settings.py
vkcc_auto/src/: __init__.py  utils.py  vkclient.py  wbhandler.py
vkcc_auto/static/: style.css
vkcc_auto/templates/: index.html
