[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "."
]

[tool.coverage.run]
branch = true
source = ["vkcc_auto"]

[project]
name = "vkcc_auto"
version = "1.0.0"
authors = [
  { name="Ruslan Akhmarov" },
]
description = "Tiny flask application for automated link shortening via vk.cc service."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3",
    "openpyxl>=3.1.5",
    "Flask>=3.0.3",
    "celery>=5.4.0",
    "redis>=5.0.8",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://github.com/rulen111/vkcc-auto"